--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 .cabecalho {
-    padding: 3% 0% 0% 15%;
+    padding: 2% 0% 0% 15%;
 }
 
 .cabecalho__menu{    
@@ -46,7 +46,7 @@ body {
     display: flex; /*Para ativar o flexbox e fazer com que os itens fiquem alinhados*/
     align-items: center; /*Fazer com que os itens alinhem no centro (Os itens serão alinhados a partir do imagem que tem a altura mais, por isso o texto está alinhado ao meio da imagem)*/
     justify-content: space-between; /*Usar para justicar/dar espaço entre os elementos filhos Ex: Section e Img*/
-    gap: 3rem;
+    gap: 3rem;    
 }
 
 .apresentacao__conteudo{
@@ -126,29 +126,29 @@ body {
 }
 
 .rodape__about {
-    padding: 0.8%; 
+    padding: 0.4%; 
     background-color: var(--cor-secundaria);
     color: var(--cor-primaria);
     font-family: var(--fonte-secundaria);
     font-weight: 500;
     font-size: 1rem;
-    text-align: center;
+    text-align: center;    
 }
 
 @media (max-width: 1200px) /* Criar responsividade, max-width de 400px para celular, max-width 800px para tablet*/ {    
 
     .cabecalho {
-        padding: 15% 15% 0% 15%;  
+        padding: 10% 15% 0% 15%;  
     }
     
    .cabecalho__menu {
         justify-content: center;
         flex-wrap: wrap;
         gap: 30px;
-        margin-bottom: 5%;
+        margin-bottom: 4%;
    }
 
-   .apresentacao {
+   .apresentacao {        
         flex-direction: column-reverse;
         padding: 5%;
         gap: 50px;
@@ -163,8 +163,34 @@ body {
    }
 
    .apresentacao__conteudo__texto {
-        font-size: 1.25rem ;
+        font-size: 1.4rem ;
    }
 
-   
+   .rodape__about {
+    padding: 1.1%;
+}
+
+}
+
+@media (max-width: 470px) {  
+
+    .cabecalho {
+        padding: 10% 4% 0% 4%;
+    }
+    
+    .apresentacao__conteudo__titulo{
+        font-size: 2.4rem;
+    }
+
+    .apresentacao__conteudo__texto {
+        font-size: 1.3rem;
+    }
+     .apresentacao__conteudo__links__navegacao {
+        font-size: 1.3rem;
+        padding: 5px;
+    }
+
+    .rodape__about {
+        padding: 1.1%;
+    }
 }
