--- a/styles/style.css
+++ b/styles/style.css
@@ -111,6 +111,10 @@ body {
     width: 50%;
 }
 
+.apresentacao__conteudo__li {
+    list-style-type: none;
+}
+
 .rodape{
     padding: 0.8%;  
     box-sizing: border-box;
@@ -179,11 +183,11 @@ body {
     }
     
     .apresentacao__conteudo__titulo{
-        font-size: 2.4rem;
+        font-size: 2rem;
     }
 
     .apresentacao__conteudo__texto {
-        font-size: 1.3rem;
+        font-size: 1.2rem;
     }
      .apresentacao__conteudo__links__navegacao {
         font-size: 1.3rem;
